; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/extr_menu_animation.c_easing_in_circ.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/extr_menu_animation.c_easing_in_circ.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (float (float, float, float, float)* @easing_in_circ to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @easing_in_circ(float %0, float %1, float %2, float %3) #0 {
  %5 = alloca float, align 4
  %6 = alloca float, align 4
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  store float %0, float* %5, align 4
  store float %1, float* %6, align 4
  store float %2, float* %7, align 4
  store float %3, float* %8, align 4
  %9 = load float, float* %7, align 4
  %10 = fneg float %9
  %11 = load float, float* %5, align 4
  %12 = load float, float* %8, align 4
  %13 = fdiv float %11, %12
  %14 = call i64 @powf(float %13, i32 2)
  %15 = sub nsw i64 1, %14
  %16 = call i32 @sqrt(i64 %15)
  %17 = sub nsw i32 %16, 1
  %18 = sitofp i32 %17 to float
  %19 = fmul float %10, %18
  %20 = load float, float* %6, align 4
  %21 = fadd float %19, %20
  ret float %21
}

declare dso_local i32 @sqrt(i64) #1

declare dso_local i64 @powf(float, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
